parser.out
Grammar:

Rule 0     S' -> statement
Rule 1     statement -> DUMP
Rule 2     statement -> PRINT expr_list
Rule 3     statement -> ID ASSIGN expr_list
Rule 4     expr_list -> expr
Rule 5     expr_list -> expr SEP expr_list
Rule 6     expr -> list
Rule 7     expr -> term COMPARE_OP term
Rule 8     expr -> term EQUAL_OP term
Rule 9     expr -> IF expr THEN expr ELSE expr ENDIF
Rule 10    expr -> term
Rule 11    expr -> expr ADD_OP term
Rule 12    expr -> LAMBDA ID ARROW expr_list
Rule 13    term -> SORT list
Rule 14    term -> TAIL SEP list
Rule 15    term -> HEAD SEP list
Rule 16    term -> factor
Rule 17    term -> term MULT_OP factor
Rule 18    factor -> LPAREN expr_list RPAREN
Rule 19    factor -> ID
Rule 20    factor -> NUMBER
Rule 21    factor -> ADD_OP factor
Rule 22    list -> LBRACKET comma_sep_list RBRACKET
Rule 23    list -> LBRACKET RBRACKET
Rule 24    comma_sep_list -> expr COMMA comma_sep_list
Rule 25    comma_sep_list -> expr

Terminals, with rules where they appear:

ADD_OP               : 11 21
ARROW                : 12
ASSIGN               : 3
COMMA                : 24
COMPARE_OP           : 7
DUMP                 : 1
ELSE                 : 9
ENDIF                : 9
EQUAL_OP             : 8
HEAD                 : 15
ID                   : 3 12 19
IF                   : 9
LAMBDA               : 12
LBRACKET             : 22 23
LPAREN               : 18
MULT_OP              : 17
NUMBER               : 20
PRINT                : 2
RBRACKET             : 22 23
RPAREN               : 18
SEP                  : 5 14 15
SORT                 : 13
TAIL                 : 14
THEN                 : 9
error                : 

Nonterminals, with rules where they appear:

comma_sep_list       : 22 24
expr                 : 4 5 9 9 9 11 24 25
expr_list            : 2 3 5 12 18
factor               : 16 17 21
list                 : 6 13 14 15
statement            : 0
term                 : 7 7 8 8 10 11 17


state 0

    (0) S' -> . statement
    (1) statement -> . DUMP
    (2) statement -> . PRINT expr_list
    (3) statement -> . ID ASSIGN expr_list
    DUMP            shift and go to state 2
    PRINT           shift and go to state 3
    ID              shift and go to state 4

    statement                      shift and go to state 1

state 1

    (0) S' -> statement .


state 2

    (1) statement -> DUMP .
    $end            reduce using rule 1 (statement -> DUMP .)


state 3

    (2) statement -> PRINT . expr_list
    (4) expr_list -> . expr
    (5) expr_list -> . expr SEP expr_list
    (6) expr -> . list
    (7) expr -> . term COMPARE_OP term
    (8) expr -> . term EQUAL_OP term
    (9) expr -> . IF expr THEN expr ELSE expr ENDIF
    (10) expr -> . term
    (11) expr -> . expr ADD_OP term
    (12) expr -> . LAMBDA ID ARROW expr_list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    IF              shift and go to state 9
    LAMBDA          shift and go to state 11
    LBRACKET        shift and go to state 13
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    expr_list                      shift and go to state 5
    expr                           shift and go to state 6
    list                           shift and go to state 7
    term                           shift and go to state 8
    factor                         shift and go to state 17

state 4

    (3) statement -> ID . ASSIGN expr_list
    ASSIGN          shift and go to state 20


state 5

    (2) statement -> PRINT expr_list .
    $end            reduce using rule 2 (statement -> PRINT expr_list .)


state 6

    (4) expr_list -> expr .
    (5) expr_list -> expr . SEP expr_list
    (11) expr -> expr . ADD_OP term
  ! shift/reduce conflict for SEP resolved as shift
  ! shift/reduce conflict for ADD_OP resolved as shift
    $end            reduce using rule 4 (expr_list -> expr .)
    RPAREN          reduce using rule 4 (expr_list -> expr .)
    THEN            reduce using rule 4 (expr_list -> expr .)
    COMMA           reduce using rule 4 (expr_list -> expr .)
    RBRACKET        reduce using rule 4 (expr_list -> expr .)
    ELSE            reduce using rule 4 (expr_list -> expr .)
    ENDIF           reduce using rule 4 (expr_list -> expr .)
    SEP             shift and go to state 21
    ADD_OP          shift and go to state 22


state 7

    (6) expr -> list .
    SEP             reduce using rule 6 (expr -> list .)
    ADD_OP          reduce using rule 6 (expr -> list .)
    $end            reduce using rule 6 (expr -> list .)
    THEN            reduce using rule 6 (expr -> list .)
    COMMA           reduce using rule 6 (expr -> list .)
    RBRACKET        reduce using rule 6 (expr -> list .)
    RPAREN          reduce using rule 6 (expr -> list .)
    ELSE            reduce using rule 6 (expr -> list .)
    ENDIF           reduce using rule 6 (expr -> list .)


state 8

    (7) expr -> term . COMPARE_OP term
    (8) expr -> term . EQUAL_OP term
    (10) expr -> term .
    (17) term -> term . MULT_OP factor
    COMPARE_OP      shift and go to state 23
    EQUAL_OP        shift and go to state 24
    SEP             reduce using rule 10 (expr -> term .)
    ADD_OP          reduce using rule 10 (expr -> term .)
    $end            reduce using rule 10 (expr -> term .)
    THEN            reduce using rule 10 (expr -> term .)
    COMMA           reduce using rule 10 (expr -> term .)
    RBRACKET        reduce using rule 10 (expr -> term .)
    RPAREN          reduce using rule 10 (expr -> term .)
    ELSE            reduce using rule 10 (expr -> term .)
    ENDIF           reduce using rule 10 (expr -> term .)
    MULT_OP         shift and go to state 25


state 9

    (9) expr -> IF . expr THEN expr ELSE expr ENDIF
    (6) expr -> . list
    (7) expr -> . term COMPARE_OP term
    (8) expr -> . term EQUAL_OP term
    (9) expr -> . IF expr THEN expr ELSE expr ENDIF
    (10) expr -> . term
    (11) expr -> . expr ADD_OP term
    (12) expr -> . LAMBDA ID ARROW expr_list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    IF              shift and go to state 9
    LAMBDA          shift and go to state 11
    LBRACKET        shift and go to state 13
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    expr                           shift and go to state 26
    list                           shift and go to state 7
    term                           shift and go to state 8
    factor                         shift and go to state 17

state 10

    (21) factor -> ADD_OP . factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    factor                         shift and go to state 27

state 11

    (12) expr -> LAMBDA . ID ARROW expr_list
    ID              shift and go to state 28


state 12

    (19) factor -> ID .
    COMPARE_OP      reduce using rule 19 (factor -> ID .)
    EQUAL_OP        reduce using rule 19 (factor -> ID .)
    MULT_OP         reduce using rule 19 (factor -> ID .)
    SEP             reduce using rule 19 (factor -> ID .)
    ADD_OP          reduce using rule 19 (factor -> ID .)
    $end            reduce using rule 19 (factor -> ID .)
    THEN            reduce using rule 19 (factor -> ID .)
    COMMA           reduce using rule 19 (factor -> ID .)
    RBRACKET        reduce using rule 19 (factor -> ID .)
    RPAREN          reduce using rule 19 (factor -> ID .)
    ELSE            reduce using rule 19 (factor -> ID .)
    ENDIF           reduce using rule 19 (factor -> ID .)


state 13

    (22) list -> LBRACKET . comma_sep_list RBRACKET
    (23) list -> LBRACKET . RBRACKET
    (24) comma_sep_list -> . expr COMMA comma_sep_list
    (25) comma_sep_list -> . expr
    (6) expr -> . list
    (7) expr -> . term COMPARE_OP term
    (8) expr -> . term EQUAL_OP term
    (9) expr -> . IF expr THEN expr ELSE expr ENDIF
    (10) expr -> . term
    (11) expr -> . expr ADD_OP term
    (12) expr -> . LAMBDA ID ARROW expr_list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    RBRACKET        shift and go to state 30
    IF              shift and go to state 9
    LAMBDA          shift and go to state 11
    LBRACKET        shift and go to state 13
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    comma_sep_list                 shift and go to state 29
    expr                           shift and go to state 31
    list                           shift and go to state 7
    term                           shift and go to state 8
    factor                         shift and go to state 17

state 14

    (13) term -> SORT . list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    LBRACKET        shift and go to state 13

    list                           shift and go to state 32

state 15

    (14) term -> TAIL . SEP list
    SEP             shift and go to state 33


state 16

    (15) term -> HEAD . SEP list
    SEP             shift and go to state 34


state 17

    (16) term -> factor .
    COMPARE_OP      reduce using rule 16 (term -> factor .)
    EQUAL_OP        reduce using rule 16 (term -> factor .)
    MULT_OP         reduce using rule 16 (term -> factor .)
    SEP             reduce using rule 16 (term -> factor .)
    ADD_OP          reduce using rule 16 (term -> factor .)
    $end            reduce using rule 16 (term -> factor .)
    THEN            reduce using rule 16 (term -> factor .)
    COMMA           reduce using rule 16 (term -> factor .)
    RBRACKET        reduce using rule 16 (term -> factor .)
    RPAREN          reduce using rule 16 (term -> factor .)
    ELSE            reduce using rule 16 (term -> factor .)
    ENDIF           reduce using rule 16 (term -> factor .)


state 18

    (18) factor -> LPAREN . expr_list RPAREN
    (4) expr_list -> . expr
    (5) expr_list -> . expr SEP expr_list
    (6) expr -> . list
    (7) expr -> . term COMPARE_OP term
    (8) expr -> . term EQUAL_OP term
    (9) expr -> . IF expr THEN expr ELSE expr ENDIF
    (10) expr -> . term
    (11) expr -> . expr ADD_OP term
    (12) expr -> . LAMBDA ID ARROW expr_list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    IF              shift and go to state 9
    LAMBDA          shift and go to state 11
    LBRACKET        shift and go to state 13
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    expr_list                      shift and go to state 35
    expr                           shift and go to state 6
    list                           shift and go to state 7
    term                           shift and go to state 8
    factor                         shift and go to state 17

state 19

    (20) factor -> NUMBER .
    COMPARE_OP      reduce using rule 20 (factor -> NUMBER .)
    EQUAL_OP        reduce using rule 20 (factor -> NUMBER .)
    MULT_OP         reduce using rule 20 (factor -> NUMBER .)
    SEP             reduce using rule 20 (factor -> NUMBER .)
    ADD_OP          reduce using rule 20 (factor -> NUMBER .)
    $end            reduce using rule 20 (factor -> NUMBER .)
    THEN            reduce using rule 20 (factor -> NUMBER .)
    COMMA           reduce using rule 20 (factor -> NUMBER .)
    RBRACKET        reduce using rule 20 (factor -> NUMBER .)
    RPAREN          reduce using rule 20 (factor -> NUMBER .)
    ELSE            reduce using rule 20 (factor -> NUMBER .)
    ENDIF           reduce using rule 20 (factor -> NUMBER .)


state 20

    (3) statement -> ID ASSIGN . expr_list
    (4) expr_list -> . expr
    (5) expr_list -> . expr SEP expr_list
    (6) expr -> . list
    (7) expr -> . term COMPARE_OP term
    (8) expr -> . term EQUAL_OP term
    (9) expr -> . IF expr THEN expr ELSE expr ENDIF
    (10) expr -> . term
    (11) expr -> . expr ADD_OP term
    (12) expr -> . LAMBDA ID ARROW expr_list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    IF              shift and go to state 9
    LAMBDA          shift and go to state 11
    LBRACKET        shift and go to state 13
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    expr_list                      shift and go to state 36
    expr                           shift and go to state 6
    list                           shift and go to state 7
    term                           shift and go to state 8
    factor                         shift and go to state 17

state 21

    (5) expr_list -> expr SEP . expr_list
    (4) expr_list -> . expr
    (5) expr_list -> . expr SEP expr_list
    (6) expr -> . list
    (7) expr -> . term COMPARE_OP term
    (8) expr -> . term EQUAL_OP term
    (9) expr -> . IF expr THEN expr ELSE expr ENDIF
    (10) expr -> . term
    (11) expr -> . expr ADD_OP term
    (12) expr -> . LAMBDA ID ARROW expr_list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    IF              shift and go to state 9
    LAMBDA          shift and go to state 11
    LBRACKET        shift and go to state 13
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    expr                           shift and go to state 6
    expr_list                      shift and go to state 37
    list                           shift and go to state 7
    term                           shift and go to state 8
    factor                         shift and go to state 17

state 22

    (11) expr -> expr ADD_OP . term
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    term                           shift and go to state 38
    factor                         shift and go to state 17

state 23

    (7) expr -> term COMPARE_OP . term
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    term                           shift and go to state 39
    factor                         shift and go to state 17

state 24

    (8) expr -> term EQUAL_OP . term
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    term                           shift and go to state 40
    factor                         shift and go to state 17

state 25

    (17) term -> term MULT_OP . factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    factor                         shift and go to state 41

state 26

    (9) expr -> IF expr . THEN expr ELSE expr ENDIF
    (11) expr -> expr . ADD_OP term
    THEN            shift and go to state 42
    ADD_OP          shift and go to state 22


state 27

    (21) factor -> ADD_OP factor .
    COMPARE_OP      reduce using rule 21 (factor -> ADD_OP factor .)
    EQUAL_OP        reduce using rule 21 (factor -> ADD_OP factor .)
    MULT_OP         reduce using rule 21 (factor -> ADD_OP factor .)
    SEP             reduce using rule 21 (factor -> ADD_OP factor .)
    ADD_OP          reduce using rule 21 (factor -> ADD_OP factor .)
    $end            reduce using rule 21 (factor -> ADD_OP factor .)
    THEN            reduce using rule 21 (factor -> ADD_OP factor .)
    COMMA           reduce using rule 21 (factor -> ADD_OP factor .)
    RBRACKET        reduce using rule 21 (factor -> ADD_OP factor .)
    RPAREN          reduce using rule 21 (factor -> ADD_OP factor .)
    ELSE            reduce using rule 21 (factor -> ADD_OP factor .)
    ENDIF           reduce using rule 21 (factor -> ADD_OP factor .)


state 28

    (12) expr -> LAMBDA ID . ARROW expr_list
    ARROW           shift and go to state 43


state 29

    (22) list -> LBRACKET comma_sep_list . RBRACKET
    RBRACKET        shift and go to state 44


state 30

    (23) list -> LBRACKET RBRACKET .
    SEP             reduce using rule 23 (list -> LBRACKET RBRACKET .)
    ADD_OP          reduce using rule 23 (list -> LBRACKET RBRACKET .)
    $end            reduce using rule 23 (list -> LBRACKET RBRACKET .)
    THEN            reduce using rule 23 (list -> LBRACKET RBRACKET .)
    COMMA           reduce using rule 23 (list -> LBRACKET RBRACKET .)
    RBRACKET        reduce using rule 23 (list -> LBRACKET RBRACKET .)
    COMPARE_OP      reduce using rule 23 (list -> LBRACKET RBRACKET .)
    EQUAL_OP        reduce using rule 23 (list -> LBRACKET RBRACKET .)
    MULT_OP         reduce using rule 23 (list -> LBRACKET RBRACKET .)
    RPAREN          reduce using rule 23 (list -> LBRACKET RBRACKET .)
    ELSE            reduce using rule 23 (list -> LBRACKET RBRACKET .)
    ENDIF           reduce using rule 23 (list -> LBRACKET RBRACKET .)


state 31

    (24) comma_sep_list -> expr . COMMA comma_sep_list
    (25) comma_sep_list -> expr .
    (11) expr -> expr . ADD_OP term
    COMMA           shift and go to state 45
    RBRACKET        reduce using rule 25 (comma_sep_list -> expr .)
    ADD_OP          shift and go to state 22


state 32

    (13) term -> SORT list .
    COMPARE_OP      reduce using rule 13 (term -> SORT list .)
    EQUAL_OP        reduce using rule 13 (term -> SORT list .)
    MULT_OP         reduce using rule 13 (term -> SORT list .)
    SEP             reduce using rule 13 (term -> SORT list .)
    ADD_OP          reduce using rule 13 (term -> SORT list .)
    $end            reduce using rule 13 (term -> SORT list .)
    THEN            reduce using rule 13 (term -> SORT list .)
    COMMA           reduce using rule 13 (term -> SORT list .)
    RBRACKET        reduce using rule 13 (term -> SORT list .)
    RPAREN          reduce using rule 13 (term -> SORT list .)
    ELSE            reduce using rule 13 (term -> SORT list .)
    ENDIF           reduce using rule 13 (term -> SORT list .)


state 33

    (14) term -> TAIL SEP . list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    LBRACKET        shift and go to state 13

    list                           shift and go to state 46

state 34

    (15) term -> HEAD SEP . list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    LBRACKET        shift and go to state 13

    list                           shift and go to state 47

state 35

    (18) factor -> LPAREN expr_list . RPAREN
    RPAREN          shift and go to state 48


state 36

    (3) statement -> ID ASSIGN expr_list .
    $end            reduce using rule 3 (statement -> ID ASSIGN expr_list .)


state 37

    (5) expr_list -> expr SEP expr_list .
    $end            reduce using rule 5 (expr_list -> expr SEP expr_list .)
    RPAREN          reduce using rule 5 (expr_list -> expr SEP expr_list .)
    SEP             reduce using rule 5 (expr_list -> expr SEP expr_list .)
    ADD_OP          reduce using rule 5 (expr_list -> expr SEP expr_list .)
    THEN            reduce using rule 5 (expr_list -> expr SEP expr_list .)
    COMMA           reduce using rule 5 (expr_list -> expr SEP expr_list .)
    RBRACKET        reduce using rule 5 (expr_list -> expr SEP expr_list .)
    ELSE            reduce using rule 5 (expr_list -> expr SEP expr_list .)
    ENDIF           reduce using rule 5 (expr_list -> expr SEP expr_list .)


state 38

    (11) expr -> expr ADD_OP term .
    (17) term -> term . MULT_OP factor
    SEP             reduce using rule 11 (expr -> expr ADD_OP term .)
    ADD_OP          reduce using rule 11 (expr -> expr ADD_OP term .)
    $end            reduce using rule 11 (expr -> expr ADD_OP term .)
    THEN            reduce using rule 11 (expr -> expr ADD_OP term .)
    COMMA           reduce using rule 11 (expr -> expr ADD_OP term .)
    RBRACKET        reduce using rule 11 (expr -> expr ADD_OP term .)
    RPAREN          reduce using rule 11 (expr -> expr ADD_OP term .)
    ELSE            reduce using rule 11 (expr -> expr ADD_OP term .)
    ENDIF           reduce using rule 11 (expr -> expr ADD_OP term .)
    MULT_OP         shift and go to state 25


state 39

    (7) expr -> term COMPARE_OP term .
    (17) term -> term . MULT_OP factor
    SEP             reduce using rule 7 (expr -> term COMPARE_OP term .)
    ADD_OP          reduce using rule 7 (expr -> term COMPARE_OP term .)
    $end            reduce using rule 7 (expr -> term COMPARE_OP term .)
    THEN            reduce using rule 7 (expr -> term COMPARE_OP term .)
    COMMA           reduce using rule 7 (expr -> term COMPARE_OP term .)
    RBRACKET        reduce using rule 7 (expr -> term COMPARE_OP term .)
    RPAREN          reduce using rule 7 (expr -> term COMPARE_OP term .)
    ELSE            reduce using rule 7 (expr -> term COMPARE_OP term .)
    ENDIF           reduce using rule 7 (expr -> term COMPARE_OP term .)
    MULT_OP         shift and go to state 25


state 40

    (8) expr -> term EQUAL_OP term .
    (17) term -> term . MULT_OP factor
    SEP             reduce using rule 8 (expr -> term EQUAL_OP term .)
    ADD_OP          reduce using rule 8 (expr -> term EQUAL_OP term .)
    $end            reduce using rule 8 (expr -> term EQUAL_OP term .)
    THEN            reduce using rule 8 (expr -> term EQUAL_OP term .)
    COMMA           reduce using rule 8 (expr -> term EQUAL_OP term .)
    RBRACKET        reduce using rule 8 (expr -> term EQUAL_OP term .)
    RPAREN          reduce using rule 8 (expr -> term EQUAL_OP term .)
    ELSE            reduce using rule 8 (expr -> term EQUAL_OP term .)
    ENDIF           reduce using rule 8 (expr -> term EQUAL_OP term .)
    MULT_OP         shift and go to state 25


state 41

    (17) term -> term MULT_OP factor .
    COMPARE_OP      reduce using rule 17 (term -> term MULT_OP factor .)
    EQUAL_OP        reduce using rule 17 (term -> term MULT_OP factor .)
    MULT_OP         reduce using rule 17 (term -> term MULT_OP factor .)
    SEP             reduce using rule 17 (term -> term MULT_OP factor .)
    ADD_OP          reduce using rule 17 (term -> term MULT_OP factor .)
    $end            reduce using rule 17 (term -> term MULT_OP factor .)
    THEN            reduce using rule 17 (term -> term MULT_OP factor .)
    COMMA           reduce using rule 17 (term -> term MULT_OP factor .)
    RBRACKET        reduce using rule 17 (term -> term MULT_OP factor .)
    RPAREN          reduce using rule 17 (term -> term MULT_OP factor .)
    ELSE            reduce using rule 17 (term -> term MULT_OP factor .)
    ENDIF           reduce using rule 17 (term -> term MULT_OP factor .)


state 42

    (9) expr -> IF expr THEN . expr ELSE expr ENDIF
    (6) expr -> . list
    (7) expr -> . term COMPARE_OP term
    (8) expr -> . term EQUAL_OP term
    (9) expr -> . IF expr THEN expr ELSE expr ENDIF
    (10) expr -> . term
    (11) expr -> . expr ADD_OP term
    (12) expr -> . LAMBDA ID ARROW expr_list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    IF              shift and go to state 9
    LAMBDA          shift and go to state 11
    LBRACKET        shift and go to state 13
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    expr                           shift and go to state 49
    list                           shift and go to state 7
    term                           shift and go to state 8
    factor                         shift and go to state 17

state 43

    (12) expr -> LAMBDA ID ARROW . expr_list
    (4) expr_list -> . expr
    (5) expr_list -> . expr SEP expr_list
    (6) expr -> . list
    (7) expr -> . term COMPARE_OP term
    (8) expr -> . term EQUAL_OP term
    (9) expr -> . IF expr THEN expr ELSE expr ENDIF
    (10) expr -> . term
    (11) expr -> . expr ADD_OP term
    (12) expr -> . LAMBDA ID ARROW expr_list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    IF              shift and go to state 9
    LAMBDA          shift and go to state 11
    LBRACKET        shift and go to state 13
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    expr_list                      shift and go to state 50
    expr                           shift and go to state 6
    list                           shift and go to state 7
    term                           shift and go to state 8
    factor                         shift and go to state 17

state 44

    (22) list -> LBRACKET comma_sep_list RBRACKET .
    SEP             reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)
    ADD_OP          reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)
    $end            reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)
    THEN            reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)
    COMMA           reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)
    RBRACKET        reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)
    COMPARE_OP      reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)
    EQUAL_OP        reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)
    MULT_OP         reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)
    RPAREN          reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)
    ELSE            reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)
    ENDIF           reduce using rule 22 (list -> LBRACKET comma_sep_list RBRACKET .)


state 45

    (24) comma_sep_list -> expr COMMA . comma_sep_list
    (24) comma_sep_list -> . expr COMMA comma_sep_list
    (25) comma_sep_list -> . expr
    (6) expr -> . list
    (7) expr -> . term COMPARE_OP term
    (8) expr -> . term EQUAL_OP term
    (9) expr -> . IF expr THEN expr ELSE expr ENDIF
    (10) expr -> . term
    (11) expr -> . expr ADD_OP term
    (12) expr -> . LAMBDA ID ARROW expr_list
    (22) list -> . LBRACKET comma_sep_list RBRACKET
    (23) list -> . LBRACKET RBRACKET
    (13) term -> . SORT list
    (14) term -> . TAIL SEP list
    (15) term -> . HEAD SEP list
    (16) term -> . factor
    (17) term -> . term MULT_OP factor
    (18) factor -> . LPAREN expr_list RPAREN
    (19) factor -> . ID
    (20) factor -> . NUMBER
    (21) factor -> . ADD_OP factor
    IF              shift and go to state 9
    LAMBDA          shift and go to state 11
    LBRACKET        shift and go to state 13
    SORT            shift and go to state 14
    TAIL            shift and go to state 15
    HEAD            shift and go to state 16
    LPAREN          shift and go to state 18
    ID              shift and go to state 12
    NUMBER          shift and go to state 19
    ADD_OP          shift and go to state 10

    expr                           shift and go to state 31
    comma_sep_list                 shift and go to state 51
    list                           shift and go to state 7
    term                           shift and go to state 8
    factor                         shift and go to state 17

state 46

    (14) term -> TAIL SEP list .
    COMPARE_OP      reduce using rule 14 (term -> TAIL SEP list .)
    EQUAL_OP        reduce using rule 14 (term -> TAIL SEP list .)
    MULT_OP         reduce using rule 14 (term -> TAIL SEP list .)
    SEP             reduce using rule 14 (term -> TAIL SEP list .)
    ADD_OP          reduce using rule 14 (term -> TAIL SEP list .)
    $end            reduce using rule 14 (term -> TAIL SEP list .)
    THEN            reduce using rule 14 (term -> TAIL SEP list .)
    COMMA           reduce using rule 14 (term -> TAIL SEP list .)
